--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,15 @@ dev_dependencies:
   firebase_auth: ^4.19.5
   firebase_core: ^2.31.0
   cloud_firestore: ^4.17.3
+  firebase_storage: ^11.7.7
   provider: ^6.1.2
   just_audio: ^0.9.26
   flutter_lints: ^4.0.0
   audioplayers: ^6.0.0
   image_picker: ^1.1.1
   cached_network_image: ^3.3.1
+  intl: ^0.19.0
+  file_picker: ^8.0.3
 
 flutter:
   uses-material-design: true
